--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     color: rgb(74, 134, 134);
 }
 
+#search {
+    background: rgb(241, 228, 228); 
+}
+
 .jumbotron-fluid {
     text-align: center;
     background: rgb(241, 228, 228);
